add keyboard remocon feature

--- a/conf/tv.conf
+++ b/conf/tv.conf
@@ -1,9 +1,30 @@
 # Set your tv channel remocon code by i-remocon.
 # see http://i-remocon.com/development/
-NHK総合: 1201
-NHK教育: 1202
-日本テレビ: 1204
-テレビ朝日: 1205
-TBSテレビ: 1206
-テレビ東京: 1207
-フジテレビ: 1208
+:channels:
+  NHK総合:
+    :channel: 1
+    :remocon: 1201
+  NHK教育:
+    :channel: 2
+    :remocon: 1202
+  日本テレビ:
+    :channel: 4
+    :remocon: 1204
+  テレビ朝日:
+    :channel: 5
+    :remocon: 1205
+  TBSテレビ:
+    :channel: 6
+    :remocon: 1206
+  テレビ東京:
+    :channel: 7
+    :remocon: 1207
+  フジテレビ:
+    :channel: 8
+    :remocon: 1208
+
+:volumes:
+  :up:
+    :remocon: 1251
+  :down:
+    :remocon: 1252
